tests/ui/type-alias-impl-trait/type-alias-impl-trait-with-no-traits.stderr
error: at least one trait must be specified
  --> $DIR/type-alias-impl-trait-with-no-traits.rs:3:12
   |
LL | type Foo = impl 'static;
   |            ^^^^^^^^^^^^

error: at least one trait must be specified
  --> $DIR/type-alias-impl-trait-with-no-traits.rs:11:13
   |
LL | fn bar() -> impl 'static {
   |             ^^^^^^^^^^^^

error: aborting due to 2 previous errors

